--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -155,7 +155,7 @@
 					<p class="fragment" data-fragment-index="0">
 						No assumed knowledge from senior high school mathematics.
 					</p>
-					<p class="fragment" data-fragment-index="1">
+					<p class="fragment" data-fragment-index="7">
 						Orientation Week (0-Week) Revision:
 					</p>
 
@@ -173,7 +173,7 @@
 							Converting between fractions, decimals and percentages.
 						</li>
 						<li class="fragment"  data-fragment-index="6">
-							Rounding decimal.
+							Rounding decimals.
 						</li>
 
 					</ul>
@@ -191,7 +191,7 @@
 				<br />
 
 				<div class="left-txt size-85">
-					<ul>
+					<ul style="line-height: 60px;">
 						<li class="fragment"  data-fragment-index="0">
 							Order of operations.
 						</li>
@@ -208,7 +208,6 @@
 				<br />
 				<br />
 				<br />
-				<br />
 			</section>
 
 			<section>
@@ -216,7 +215,7 @@
 
 				<div class="size-80 left-txt">
 
-					<ul>
+					<ul style="line-height: 60px;">
 						<li class="fragment"  data-fragment-index="0">
 							No textbook required and no reading list.
 						</li>
@@ -237,8 +236,6 @@
 					</ul>
 				</div>
 
-				<br />
-				<br />
 				<br />
 				<br />
 				<br />
@@ -270,10 +267,10 @@
 							Progress Test 1 (20%) - Week 4.
 						</li>
 						<li class="fragment"  data-fragment-index="3">
-							Progress Test 2 (20%) - Week 8.
+							Progress Test 2 (30%) - Week 8.
 						</li>
 						<li class="fragment"  data-fragment-index="3">
-							Progress Test 3 (20%) - Week 12.
+							Progress Test 3 (30%) - Week 12.
 						</li>
 
 
