--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -39,6 +39,18 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<style>
+		.fragment.emph {
+			font-weight: normal;
+			text-decoration: none;
+		}
+
+		.fragment.emph.visible {
+			font-weight: bold;
+			text-decoration: underline;
+		}
+	</style>
+
 </head>
 
 <body>
@@ -66,9 +78,38 @@
 				</h2>
 
 				<br />
-				<p style="margin-top: 50px;">Introduction
+				<p style="margin-top: 50px;">Course Introduction
 				</p>
 				<br /><br />
+			</section>
+
+			<section>
+				<h3>Foundation Mathematics</h3>
+
+				<br/>
+				<p style="font-size: 120%;margin-bottom: 50px;">
+					Welcome!
+				</p>
+
+
+
+				<div class="size-80">
+					
+						<p class="fragment" data-fragment-index="0">
+							<span class="fragment custom emph">Convenor:</span>
+							<span>Juan Carlos Ponce Campuzano</span>
+						</p>
+					
+
+				</div>
+
+				<br />
+
+				<div>
+					<img style="width: 50px;" src="images/Griffith-logo-black-book.png">
+				</div>
+
+
 			</section>
 
 			<section>
@@ -88,7 +129,7 @@
 
 							</ul>
 						</li>
-						<br/>
+						<br />
 						<li class="fragment" data-fragment-index="3">
 							Format of lecture:
 							<ul>
@@ -172,7 +213,7 @@
 						<li class="fragment" data-fragment-index="5">
 							Converting between fractions, decimals and percentages.
 						</li>
-						<li class="fragment"  data-fragment-index="6">
+						<li class="fragment" data-fragment-index="6">
 							Rounding decimals.
 						</li>
 
@@ -192,13 +233,13 @@
 
 				<div class="left-txt size-85">
 					<ul style="line-height: 60px;">
-						<li class="fragment"  data-fragment-index="0">
+						<li class="fragment" data-fragment-index="0">
 							Order of operations.
 						</li>
-						<li class="fragment"  data-fragment-index="1">
+						<li class="fragment" data-fragment-index="1">
 							Index Laws.
 						</li>
-						<li class="fragment"  data-fragment-index="2">
+						<li class="fragment" data-fragment-index="2">
 							Scientific notation.
 						</li>
 					</ul>
@@ -216,19 +257,19 @@
 				<div class="size-80 left-txt">
 
 					<ul style="line-height: 60px;">
-						<li class="fragment"  data-fragment-index="0">
+						<li class="fragment" data-fragment-index="0">
 							No textbook required and no reading list.
 						</li>
-						<li class="fragment"  data-fragment-index="1">
+						<li class="fragment" data-fragment-index="1">
 							Lecture videos (pre-recorded).
 						</li>
-						<li class="fragment"  data-fragment-index="2">
+						<li class="fragment" data-fragment-index="2">
 							Weekly summary sheet.
 						</li>
-						<li class="fragment"  data-fragment-index="3">
+						<li class="fragment" data-fragment-index="3">
 							Workshops Questions (and solutions).
 						</li>
-						<li class="fragment"  data-fragment-index="4"> 
+						<li class="fragment" data-fragment-index="4">
 							Numbas (online practice environment).
 						</li>
 
@@ -247,10 +288,10 @@
 				<div class="size-80 left-txt">
 
 					<ul>
-						<li class="fragment"  data-fragment-index="0">
+						<li class="fragment" data-fragment-index="0">
 							Foundation Mathematics is non-graded course.
 						</li>
-						<li class="fragment"  data-fragment-index="1">
+						<li class="fragment" data-fragment-index="1">
 							Non-graded pass (NGP) or non-graded fail (NGF).
 						</li>
 
@@ -260,16 +301,16 @@
 					<br /><br />
 
 					<ul>
-						<li class="fragment"  data-fragment-index="2">
+						<li class="fragment" data-fragment-index="2">
 							Workshop Engagement (20%) - Weekly.
 						</li>
-						<li class="fragment"  data-fragment-index="3">
+						<li class="fragment" data-fragment-index="3">
 							Progress Test 1 (20%) - Week 4.
 						</li>
-						<li class="fragment"  data-fragment-index="3">
+						<li class="fragment" data-fragment-index="3">
 							Progress Test 2 (30%) - Week 8.
 						</li>
-						<li class="fragment"  data-fragment-index="3">
+						<li class="fragment" data-fragment-index="3">
 							Progress Test 3 (30%) - Week 12.
 						</li>
 
@@ -279,7 +320,8 @@
 					<br /><br />
 
 					<ul>
-						<li class="fragment"  data-fragment-index="4">Minimum of 65% overall required for a non-graded pass (NSP).</li>
+						<li class="fragment" data-fragment-index="4">Minimum of 65% overall required for a non-graded
+							pass (NSP).</li>
 					</ul>
 
 
@@ -296,16 +338,16 @@
 				<div class="size-80 left-txt">
 
 					<ol style="line-height: 60px;">
-						<li class="fragment"  data-fragment-index="0">
+						<li class="fragment" data-fragment-index="0">
 							Workshop.
 						</li>
-						<li class="fragment"  data-fragment-index="1">
+						<li class="fragment" data-fragment-index="1">
 							Revision sessions/Drop-in Session/Study Sessions.
 						</li>
-						<li class="fragment"  data-fragment-index="2">
+						<li class="fragment" data-fragment-index="2">
 							Microsoft Teams.
 						</li>
-						<li class="fragment"  data-fragment-index="3">
+						<li class="fragment" data-fragment-index="3">
 							Email (for personal and confidential matters).
 						</li>
 
@@ -345,7 +387,7 @@
 
 
 					</ol>
-					<p  class="fragment"  data-fragment-index="0">
+					<p class="fragment" data-fragment-index="0">
 						Reliable internet connection (or use Griffith WiFi).
 					</p>
 				</div>
