--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -120,10 +120,10 @@
 						<li class="fragment" data-fragment-index="0">
 							Choice of lecture:
 							<ul>
-								<li class="fragment" data-fragment-index="1">
+								<li>
 									[<strong>Recommended</strong>] Live lecture on-campus.
 								</li>
-								<li class="fragment" data-fragment-index="2">
+								<li>
 									Pre-recorded lecture (not run live).
 								</li>
 
@@ -133,10 +133,10 @@
 						<li class="fragment" data-fragment-index="3">
 							Format of lecture:
 							<ul>
-								<li class="fragment" data-fragment-index="4">
+								<li>
 									Introduce the content for the week.
 								</li>
-								<li class="fragment" data-fragment-index="5">
+								<li>
 									Worked examples.
 								</li>
 
@@ -483,6 +483,7 @@
 			</section>
 
 			<section data-transition="fade"
+				data-background-color="rgb(0,0,0)"
 				data-background-iframe="https://www.dynamicmath.xyz/threejs/math-symbols-fall/">
 
 				<h3 style="color:white; margin-top: -0px;">See you in Week 1! </h3>
