--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -321,7 +321,7 @@
 
 					<ul>
 						<li class="fragment" data-fragment-index="4">Minimum of 65% overall required for a non-graded
-							pass (NSP).</li>
+							pass (NGP).</li>
 					</ul>
 
 
