--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -1286,29 +1286,21 @@ function drawPoint() {
         <h2>References</h2>
 
         <ol class="bbtex-list">
-          <li id="ban-2024">
-            Ban, S., &amp; Kim, T. (2024). <em>Rational-Function-Model-Based Rigorous Bundle Adjustment for Improving the
+          <li id="ban-2024">Ban, S., &amp; Kim, T. (2024). <em>Rational-Function-Model-Based Rigorous Bundle Adjustment for Improving the
               Relative Geometric Positioning Accuracy of Multiple Korea Multi-Purpose Satellite-3A Images</em>.
             <strong>Remote Sensing</strong>, 16(16), 2890.
-            <a href="https://doi.org/10.3390/rs16162890" target="_blank">https://doi.org/10.3390/rs16162890</a>
+            <a href="https://doi.org/10.3390/rs16162890" target="_blank">doi.org/10.3390/rs16162890</a>
           </li>
 
-          <li id="barnsley-1993">
-            Barnsley, M. (1993). <em>Fractals Everywhere</em>. (Chapter III). 2nd ed. Morgan Kaufmann. USA.
+          <li id="barnsley-1993">Barnsley, M. (1993). <em>Fractals Everywhere</em>. (Chapter III). 2nd ed. Morgan Kaufmann. USA.
           </li>
 
-          <li id="barnsley-2003">
-            Barnsley, M., Hutchinson, J. E., &amp; Stenflo, Ö. (2003). <em>V-variable fractals and superfractals</em>.
-            <a href="https://arxiv.org/abs/math/0312314" target="_blank">https://arxiv.org/abs/math/0312314</a>
+          <li id="barnsley-2003">Barnsley, M., Hutchinson, J. E., &amp; Stenflo, Ö. (2003). <em>V-variable fractals and superfractals</em>.
+            &nbsp;<a href="https://arxiv.org/abs/math/0312314" target="_blank"><i class="fas fa-external-link-alt"></i></a>
           </li>
 
-          <li id="howard-2014">
-            Howard, A., &amp; Rorres, C. (2014). <em>Elementary Linear Algebra</em>. 11th ed. Wiley. USA. pp. 624–639.
-          </li>
-
-          <li id="rogers-1976">
-            Rogers, D. F. (1976). <em>Mathematical Elements for Computer Graphics</em>. McGraw Hill.
-             &nbsp;<a href="https://archive.org/details/mathematicalelem00roge/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+          <li id="rogers-1976">Rogers, D. F. (1989). <em>Mathematical Elements for Computer Graphics</em>. (Chapters 2 &amp; 3) 
+            McGraw Hill, Inc. &nbsp;<a href="https://archive.org/details/mathematicalelem00roge/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
           </li>
         </ol>
 
