--- a/notes/2201nsc/week-01.html
+++ b/notes/2201nsc/week-01.html
@@ -71,7 +71,7 @@
 
       <div id="section1">
 
-        <h2 id="intro">Lorem Ipsum</h2>
+        <h2 id="intro">Under construction 🏗️!</h2>
 
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -83,9 +83,9 @@
         </p>
 
 
-        <p style="text-align: center; font-weight: bold;">Coming soon!</p>
+        <p style="text-align: center; font-weight: bold;">In the mean time enjoy this cool animation!</p>
 
-        <iframe frameborder="0" width="100%" height="400px" scrolling="no" src="https://vector-calculus.github.io/applets/threejs/gravity/" style="border: 0px solid black; overflow: hidden;">
+        <iframe frameborder="0" width="100%" height="500px" scrolling="no" src="https://vector-calculus.github.io/applets/threejs/gravity/" style="border: 0px solid black; overflow: hidden;">
         </iframe>
 
       </div>
