--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -1288,7 +1288,7 @@ function drawPoint() {
         <ol class="bbtex-list">
           <li id="ban-2024">Ban, S., &amp; Kim, T. (2024). <em>Rational-Function-Model-Based Rigorous Bundle Adjustment for Improving the
               Relative Geometric Positioning Accuracy of Multiple Korea Multi-Purpose Satellite-3A Images</em>.
-            <strong>Remote Sensing</strong>, 16(16), 2890.
+            <em>Remote Sensing</em>, 16(16), 2890.
             <a href="https://doi.org/10.3390/rs16162890" target="_blank">doi.org/10.3390/rs16162890</a>
           </li>
 
