--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -103,7 +103,7 @@
           <img src="imgs/affine-transformations/application-affine-satellite.png" loading="lazy" alt="Mountain landscape" width="500">
           <figcaption>
             Geometry correction for satellite images by
-            <a href="#ban-2024">S. Ban &amp; T. Kim (2024)</a>.
+            <a href="#ban-2024" id="ref1">S. Ban &amp; T. Kim (2024)</a>.
           </figcaption>
         </figure>
 
@@ -848,8 +848,10 @@ function plotAxesInfo() {
           starting with a square or any other closed figure can still lead to the same limiting fractal. This
           illustrates
           the robustness of the process with respect to the choice of initial shape. In his work on
-          <em>V-variable fractals and superfractals</em>, Michael Barnsley, et al. (2003) famously
-          demonstrated this flexibility using the image of a fish as the initial figure.
+          <em>V-variable fractals and superfractals</em>, 
+          <a href="#barnsley-2003" id="ref2">Michael Barnsley, et al. (2003)</a> 
+          famously demonstrated this flexibility using the 
+          image of a fish as the initial figure.
         </p>
 
         <p>
@@ -1289,18 +1291,20 @@ function drawPoint() {
           <li id="ban-2024">Ban, S., &amp; Kim, T. (2024). <em>Rational-Function-Model-Based Rigorous Bundle Adjustment for Improving the
               Relative Geometric Positioning Accuracy of Multiple Korea Multi-Purpose Satellite-3A Images</em>.
             <em>Remote Sensing</em>, 16(16), 2890.
-            <a href="https://doi.org/10.3390/rs16162890" target="_blank">doi.org/10.3390/rs16162890</a>
+            <a href="https://doi.org/10.3390/rs16162890" target="_blank" title="Go">doi.org/10.3390/rs16162890</a> 
+            <a href="#ref1" title="Jump up">↩</a>
           </li>
 
           <li id="barnsley-1993">Barnsley, M. (1993). <em>Fractals Everywhere</em>. (Chapter III). 2nd ed. Morgan Kaufmann. USA.
           </li>
 
           <li id="barnsley-2003">Barnsley, M., Hutchinson, J. E., &amp; Stenflo, Ö. (2003). <em>V-variable fractals and superfractals</em>.
-            &nbsp;<a href="https://arxiv.org/abs/math/0312314" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+            <a href="https://arxiv.org/abs/math/0312314" title="Go" target="_blank">arXiv:math/0312314</a>
+              <a href="#ref2" title="Jump up">↩</a>
           </li>
 
           <li id="rogers-1976">Rogers, D. F. (1989). <em>Mathematical Elements for Computer Graphics</em>. (Chapters 2 &amp; 3) 
-            McGraw Hill, Inc. &nbsp;<a href="https://archive.org/details/mathematicalelem00roge/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+            McGraw Hill, Inc. &nbsp;<a href="https://archive.org/details/mathematicalelem00roge/" title="Go" target="_blank"><i class="fas fa-external-link-alt"></i></a>
           </li>
         </ol>
 
