--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>  Contents
+  <title>  Linear Algebra &amp; Applications
 </title>
 
   <meta charset="UTF-8">
@@ -62,14 +62,18 @@
 
     <br><br>
 
-    <h1>Contents</h1>
+    <div style="text-align: center;">
+       <h1>Linear Algebra &amp; Applications</h1>
+    </div>
   </header>
 
+  <hr>
+
    <nav role="navigation" class="toc">
-        
+        <h2>Contents</h2>
         <ol>
-          <li><a href="#">Introduction</a></li>
-          <li><a href="week-01.html">Week 1</a></li>
+          <!--<li><a href="#">Introduction</a></li>-->
+          <li><a href="week-01.html">Week 1</a> 🚧</li>
           <li><a href="affine-transformations.html">Affine transformations</a></li>
         </ol>
 
