--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -39,6 +39,18 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<style>
+		.fragment.emph {
+			font-weight: normal;
+			text-decoration: none;
+		}
+
+		.fragment.emph.visible {
+			font-weight: bold;
+			text-decoration: underline;
+		}
+	</style>
+
 </head>
 
 <body>
@@ -72,57 +84,441 @@
 			</section>
 
 			<section>
-				<h3>Topics</h3>
+				<section>
+					<h3>Foundation Mathematics</h3>
 
-
-
-				<div class="size-80 left-txt">
-
-
-					<ul style="line-height: 60px;">
-						<li>
-							Orders of Operation
-						</li>
-						<li>
-							Index Laws
-						</li>
-						<li>
-							Scientific Notation
-						</li>
-					</ul>
-
-
-
-				</div>
-
-				<br />
-				<br />
-				<br />
-				<br />
-
-
-
-			</section>
-			<section>
-				<h3>Topics</h3>
-
-
-
-				<div class="size-80">
-
-					<p class="fragment" data-fragment-index="0">
-						<strong>Question:</strong>
-						How would you do this operation?
+					<br />
+					<p style="font-size: 120%;margin-bottom: 50px;">
+						Welcome!
 					</p>
 
 
-				</div>
 
-				<br />
+					<div class="size-80">
+
+						<p class="fragment" data-fragment-index="0">
+							<span class="fragment custom emph">Convenor:</span>
+							<span>Juan Carlos Ponce Campuzano</span>
+						</p>
+
+
+					</div>
+
+					<br />
+
+					<div>
+						<img style="width: 50px;" src="images/Griffith-logo-black-book.png">
+					</div>
+
+
+				</section>
+
+				<section>
+					<h3>Lecture (two hours)</h3>
+
+					<div class="size-80  left-txt">
+						<ul>
+							<li class="fragment" data-fragment-index="0">
+								Choice of lecture:
+								<ul>
+									<li class="fragment" data-fragment-index="1">
+										[<strong>Recommended</strong>] Live lecture on-campus.
+									</li>
+									<li class="fragment" data-fragment-index="2">
+										Pre-recorded lecture (not run live).
+									</li>
+
+								</ul>
+							</li>
+							<br />
+							<li class="fragment" data-fragment-index="3">
+								Format of lecture:
+								<ul>
+									<li class="fragment" data-fragment-index="4">
+										Introduce the content for the week.
+									</li>
+									<li class="fragment" data-fragment-index="5">
+										Worked examples.
+									</li>
+
+								</ul>
+							</li>
+
+						</ul>
+					</div>
+
+					<br />
+					<br />
+					<br />
+				</section>
+
+				<section>
+					<h3>Workshop (two hours)</h3>
+
+					<div class="size-80 left-txt">
+						<ul>
+							<li class="fragment" data-fragment-index="0">
+								Format of workshop:
+								<ul>
+									<li class="fragment " data-fragment-index="1">
+										Collaborate with other students.
+									</li>
+									<li class="fragment" data-fragment-index="2">
+										Work through workshop questions.
+									</li>
+									<li class="fragment" data-fragment-index="3">
+										Opportunity to ask questions.
+									</li>
+									<li class="fragment" data-fragment-index="4">
+										Receive individualised help.
+									</li>
+									<li class="fragment" data-fragment-index="5">
+										Marks for engagement with workshop.
+									</li>
+
+								</ul>
+							</li>
+
+
+						</ul>
+					</div>
+
+					<br />
+					<br />
+					<br />
+					<br />
+				</section>
+
+
+				<section>
+					<h3>Assumed Knowledge</h3>
+
+					<div class="size-80 left-txt">
+						<p class="fragment" data-fragment-index="0">
+							No assumed knowledge from senior high school mathematics.
+						</p>
+						<p class="fragment" data-fragment-index="7">
+							Orientation Week (0-Week) Revision:
+						</p>
+
+						<ul>
+							<li class="fragment" data-fragment-index="2">
+								Understanding of the basic operations.
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								Working with negative numbers.
+							</li>
+							<li class="fragment" data-fragment-index="4">
+								Working with fractions.
+							</li>
+							<li class="fragment" data-fragment-index="5">
+								Converting between fractions, decimals and percentages.
+							</li>
+							<li class="fragment" data-fragment-index="6">
+								Rounding decimals.
+							</li>
+
+						</ul>
+
+						<p class="fragment" data-fragment-index="8">
+							👉 Resources available in Learning@Griffith
+						</p>
+
+					</div>
+
+					<br />
+				</section>
+
+				<section>
+					<h3>Resources available on Learning@Griffith</h3>
+
+					<div class="size-80 left-txt">
+
+						<ul style="line-height: 60px;">
+							<li class="fragment" data-fragment-index="0">
+								No textbook required and no reading list.
+							</li>
+							<li class="fragment" data-fragment-index="1">
+								Lecture videos (pre-recorded).
+							</li>
+							<li class="fragment" data-fragment-index="2">
+								Weekly summary sheet.
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								Workshops Questions (and solutions).
+							</li>
+							<li class="fragment" data-fragment-index="4">
+								Numbas (online practice environment).
+							</li>
+
+
+						</ul>
+					</div>
+
+					<br />
+					<br />
+					<br />
+				</section>
+
+				<section>
+					<h3>Assessment</h3>
+
+					<div class="size-80 left-txt">
+
+						<ul>
+							<li class="fragment" data-fragment-index="0">
+								Foundation Mathematics is non-graded course.
+							</li>
+							<li class="fragment" data-fragment-index="1">
+								Non-graded pass (NGP) or non-graded fail (NGF).
+							</li>
+
+
+						</ul>
+
+						<br /><br />
+
+						<ul>
+							<li class="fragment" data-fragment-index="2">
+								Workshop Engagement (20%) - Weekly.
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								Progress Test 1 (20%) - Week 4.
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								Progress Test 2 (30%) - Week 8.
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								Progress Test 3 (30%) - Week 12.
+							</li>
+
+
+						</ul>
+
+						<br /><br />
+
+						<ul>
+							<li class="fragment" data-fragment-index="4">Minimum of 65% overall required for a
+								non-graded
+								pass (NGP).</li>
+						</ul>
+
+
+					</div>
+
+					<br />
+				</section>
+
+				<section>
+					<h3>Need help?</h3>
 
 
 
+					<div class="size-80 left-txt">
+
+						<ol style="line-height: 60px;">
+							<li class="fragment" data-fragment-index="0">
+								Workshop.
+							</li>
+							<li class="fragment" data-fragment-index="1">
+								Revision sessions/Drop-in Session/Study Sessions.
+							</li>
+							<li class="fragment" data-fragment-index="2">
+								Microsoft Teams.
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								Email (for personal and confidential matters).
+							</li>
+
+
+						</ol>
+					</div>
+
+					<br />
+					<br />
+					<br />
+					<br />
+				</section>
+
+				<section>
+					<h3>Required Resources</h3>
+
+
+
+					<div class="size-80 left-txt">
+
+						<p>
+							Scientific Calculator (graphics calculators and programmable
+							calculators cannot be used during assessment).
+						</p>
+
+						<ol>
+							<li>
+								Campus Bookshop.
+							</li>
+							<li>
+								Officeworks.
+							</li>
+							<li>
+								Big W.
+							</li>
+
+
+
+						</ol>
+						<p class="fragment" data-fragment-index="0">
+							Reliable internet connection (or use Griffith WiFi). 🛜
+						</p>
+					</div>
+
+
+
+					<br /><br />
+				</section>
+
+				<section>
+					<h3>Workload (10-12 hours per week for 10CP course)</h3>
+
+
+
+					<div class="size-80 left-txt">
+
+						<table>
+							<tr>
+								<td style="border: none;">
+									Lecture
+
+								</td>
+								<td style="border: none;">
+									2 hours
+
+								</td>
+							</tr>
+							<tr>
+								<td style="border: none;">
+									Workshop
+
+								</td style="border: none;">
+								<td style="border: none;">
+									2 hours
+
+								</td>
+							</tr>
+							<tr>
+								<td style="border: none;">
+									Complete workshop questions
+
+								</td>
+								<td style="border: none;">
+									2 hours
+
+								</td>
+							</tr>
+							<tr>
+								<td style="border: none;">
+									Re-watch video
+
+								</td>
+								<td style="border: none;">
+									1 hours
+
+								</td>
+							</tr>
+							<tr>
+								<td style="border: none;">
+									Numbas (online environment)
+
+								</td>
+								<td style="border: none;">
+									2 hours
+
+								</td>
+							</tr>
+							<tr>
+								<td style="border: none;">
+									Revision/Study for assessment
+
+								</td>
+								<td style="border: none;">
+									1 hours
+
+								</td>
+							</tr>
+							<tr class="fragment" data-fragment-index="0">
+								<td>
+									<strong>Total</strong>
+								</td>
+								<td>
+									10
+								</td>
+							</tr>
+
+
+						</table>
+
+					</div>
+
+					<br />
+				</section>
 			</section>
+
+			<section>
+				<section>
+					<h3>
+						Week 1
+					</h3>
+
+					<br />
+
+					<div class="left-txt size-85">
+						<ul style="line-height: 60px;">
+							<li class="fragment" data-fragment-index="0">
+								Order of operations.
+							</li>
+							<li class="fragment" data-fragment-index="1">
+								Index Laws.
+							</li>
+							<li class="fragment" data-fragment-index="2">
+								Scientific notation.
+							</li>
+						</ul>
+
+					</div>
+					<br />
+					<br />
+					<br />
+					<br />
+				</section>
+
+				<section>
+					<h3>
+						Week 1
+					</h3>
+
+					<br />
+
+					<div class="left-txt size-85">
+						<ul style="line-height: 60px;">
+							<li class="fragment" data-fragment-index="0">
+								Order of operations.
+							</li>
+							<li class="fragment" data-fragment-index="1">
+								Index Laws.
+							</li>
+							<li class="fragment" data-fragment-index="2">
+								Scientific notation.
+							</li>
+						</ul>
+
+					</div>
+					<br />
+					<br />
+					<br />
+					<br />
+				</section>
+			</section>
+
+
 
 
 
