--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -490,13 +490,15 @@
 					<br />
 				</section>
 
+				<!--
 				<section>
-					<img class="fragment custom fade-img" data-fragment-index="0" src="images/week-01/branches.png">
+					<img style="width: 100%;" class="fragment custom fade-img" data-fragment-index="0" src="images/week-01/branches.png">
 					<div class="fragment" data-fragment-index="0">
 						<p class="overlay-text">Mathematics <br>∞
 						</p>
 					</div>
 				</section>
+				-->
 
 				<section data-auto-animate>
 					<img style="width: 100%;" src="images/week-01/branches.png">
@@ -516,7 +518,7 @@
 			<section>
 				<section>
 					<h3>
-						Week 1
+						Topics for Week 1
 					</h3>
 
 					<br />
