--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -526,13 +526,13 @@
 					<div class="left-txt size-85">
 						<ul style="line-height: 60px;">
 							<li class="fragment" data-fragment-index="0">
-								Order of operations.
+								Order of Operations.
 							</li>
 							<li class="fragment" data-fragment-index="1">
 								Index Laws.
 							</li>
 							<li class="fragment" data-fragment-index="2">
-								Scientific notation.
+								Scientific Notation.
 							</li>
 						</ul>
 
