--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -726,9 +726,9 @@
 							</li>
 						</ul>
 					</div>
-					<br/>
-					<br/>
-					<br/>
+					<br />
+					<br />
+					<br />
 				</section>
 
 				<section>
@@ -748,9 +748,9 @@
 							</li>
 						</ul>
 					</div>
-					<br/>
-					<br/>
-					<br/>
+					<br />
+					<br />
+					<br />
 				</section>
 
 				<section>
@@ -765,9 +765,112 @@
 							<li>0.0089</li>
 						</ol>
 					</div>
-					<br/>
-					<br/>
-					<br/>
+					<br />
+					<br />
+					<br />
+				</section>
+
+
+			</section>
+
+			<section>
+				<section>
+					<h3>Index Laws</h3>
+
+					<div class="left-txt size-70">
+						<p>
+							Index laws (or exponent rules) help us simplify expressions involving powers of the same
+							base.
+						</p>
+
+						<p>Here are the main rules to remember:</p>
+
+
+					</div>
+					<div class="left-txt size-75">
+
+						<ul style="line-height: 60px;">
+							<li><strong>Multiplying:</strong> \( a^m \times a^n = a^{m+n} \)</li>
+							<li><strong>Dividing:</strong> \( \dfrac{a^m}{a^n} = a^{m-n} \)</li>
+							<li><strong>Power of a power:</strong> \( (a^m)^n = a^{m \times n} \)</li>
+							<li><strong>Power of a product:</strong> \( (ab)^n = a^n b^n \)</li>
+							<li><strong>Zero index:</strong> \( a^0 = 1 \quad (a \neq 0) \)</li>
+							<li><strong>Negative index:</strong> \( a^{-n} = \dfrac{1}{a^n} \)</li>
+						</ul>
+					</div>
+					<br />
+				</section>
+
+				<section>
+					<h3>Examples: Multiply and Divide</h3>
+
+					<div class="left-txt size-85">
+						<ul>
+							<li>
+								\( x^3 \times x^4 = x^{3+4} = x^7 \)
+							</li>
+							<li>
+								\( \frac{y^5}{y^2} = y^{5 - 2} = y^3 \)
+							</li>
+							<li>
+								\( 2^3 \times 2^2 = 2^{3+2} = 2^5 = 32 \)
+							</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<h3>Power of a Power / Product</h3>
+
+					<div class="left-txt size-85">
+						<ul>
+							<li>
+								\( (x^2)^3 = x^{2 \times 3} = x^6 \)
+							</li>
+							<li>
+								\( (3a)^2 = 3^2 \times a^2 = 9a^2 \)
+							</li>
+							<li>
+								\( (2x^3)^2 = 2^2 \times x^6 = 4x^6 \)
+							</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<h3>Zero and Negative Indices</h3>
+
+					<div class="left-txt size-85">
+						<ul>
+							<li>
+								\( a^0 = 1 \) (as long as \( a \neq 0 \))
+							</li>
+							<li>
+								\( 7^0 = 1 \), \( x^0 = 1 \)
+							</li>
+							<li>
+								\( a^{-n} = \frac{1}{a^n} \)
+							</li>
+							<li>
+								\( 10^{-2} = \frac{1}{10^2} = \frac{1}{100} \)
+							</li>
+						</ul>
+					</div>
+				</section>
+
+
+				<section>
+					<h3>Try These</h3>
+
+					<div class="left-txt size-85">
+						<ol>
+							<li> \( x^5 \times x^3 \) </li>
+							<li> \( \frac{a^6}{a^2} \) </li>
+							<li> \( (b^4)^2 \) </li>
+							<li> \( (2c)^3 \) </li>
+							<li> \( 5^0 + 3^{-1} \) </li>
+						</ol>
+					</div>
 				</section>
 
 
