--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -778,25 +778,33 @@
 					<h3>Index Laws</h3>
 
 					<div class="left-txt size-70">
-						<p>
-							Index laws (or exponent rules) help us simplify expressions involving powers of the same
+						<p class="fragment" data-fragment-index="0">
+							Index laws (or exponent rules) help us simplify
+							expressions involving powers of the same
 							base.
 						</p>
 
-						<p>Here are the main rules to remember:</p>
-
-
 					</div>
-					<div class="left-txt size-75">
+					<div class="left-txt size-80">
 
-						<ul style="line-height: 60px;">
-							<li><strong>Multiplying:</strong> \( a^m \times a^n = a^{m+n} \)</li>
-							<li><strong>Dividing:</strong> \( \dfrac{a^m}{a^n} = a^{m-n} \)</li>
-							<li><strong>Power of a power:</strong> \( (a^m)^n = a^{m \times n} \)</li>
-							<li><strong>Power of a product:</strong> \( (ab)^n = a^n b^n \)</li>
-							<li><strong>Zero index:</strong> \( a^0 = 1 \quad (a \neq 0) \)</li>
-							<li><strong>Negative index:</strong> \( a^{-n} = \dfrac{1}{a^n} \)</li>
-						</ul>
+						<table style="width: 100%;">
+							<tr>
+								<td style="width: 70%;">
+									<ul style="line-height: 60px;">
+										<li class="fragment" data-fragment-index="1"><strong>Multiplying:</strong> \( a^m \times a^n = a^{m+n} \)</li>
+										<li class="fragment" data-fragment-index="2"><strong>Dividing:</strong> \( \dfrac{a^m}{a^n} = a^{m-n} \)</li>
+										<li class="fragment" data-fragment-index="3"><strong>Power of a power:</strong> \( (a^m)^n = a^{m \times n} \)</li>
+										<li class="fragment" data-fragment-index="4"><strong>Power of a product:</strong> \( (ab)^n = a^n b^n \)</li>
+										<li class="fragment" data-fragment-index="5"><strong>Zero index:</strong> \( a^0 = 1 \quad (a \neq 0) \)</li>
+										<li class="fragment" data-fragment-index="6"><strong>Negative index:</strong> \( a^{-n} = \dfrac{1}{a^n} \)</li>
+									</ul>
+								</td>
+								<td style="width: 30%; text-align: center;" class="fragment" data-fragment-index="7">
+									<strong>Extra:</strong><br/>
+									$\large a^{\frac{1}{n}} = \sqrt[n]{a}$
+								</td>
+							</tr>
+						</table>
 					</div>
 					<br />
 				</section>
@@ -805,7 +813,7 @@
 					<h3>Examples: Multiply and Divide</h3>
 
 					<div class="left-txt size-85">
-						<ul>
+						<ul style="line-height: 80px;">
 							<li>
 								\( x^3 \times x^4 = x^{3+4} = x^7 \)
 							</li>
@@ -817,13 +825,16 @@
 							</li>
 						</ul>
 					</div>
+					<br/>
+					<br/>
+					<br/>
 				</section>
 
 				<section>
 					<h3>Power of a Power / Product</h3>
 
 					<div class="left-txt size-85">
-						<ul>
+						<ul style="line-height: 80px;">
 							<li>
 								\( (x^2)^3 = x^{2 \times 3} = x^6 \)
 							</li>
@@ -835,18 +846,21 @@
 							</li>
 						</ul>
 					</div>
+					<br/>
+					<br/>
+					<br/>
 				</section>
 
 				<section>
 					<h3>Zero and Negative Indices</h3>
 
 					<div class="left-txt size-85">
-						<ul>
+						<ul style="line-height: 80px;">
 							<li>
 								\( a^0 = 1 \) (as long as \( a \neq 0 \))
 							</li>
 							<li>
-								\( 7^0 = 1 \), \( x^0 = 1 \)
+								\( 7^0 = 1, \,\) \( x^0 = 1 \)
 							</li>
 							<li>
 								\( a^{-n} = \frac{1}{a^n} \)
@@ -856,6 +870,9 @@
 							</li>
 						</ul>
 					</div>
+					<br/>
+					<br/>
+					<br/>
 				</section>
 
 
@@ -863,14 +880,17 @@
 					<h3>Try These</h3>
 
 					<div class="left-txt size-85">
-						<ol>
+						<ol style="line-height: 80px;">
 							<li> \( x^5 \times x^3 \) </li>
-							<li> \( \frac{a^6}{a^2} \) </li>
+							<li> \( \dfrac{a^6}{a^2} \) </li>
 							<li> \( (b^4)^2 \) </li>
 							<li> \( (2c)^3 \) </li>
 							<li> \( 5^0 + 3^{-1} \) </li>
 						</ol>
 					</div>
+					<br/>
+					<br/>
+					
 				</section>
 
 
