--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -702,9 +702,14 @@
 					<div class="left-txt size-80">
 
 						<p>
-							Format:
-							\[
-							a \times 10^n \quad \text{where } 1 \leq a \lt 10 \] </p>
+							Format:</p>
+					</div>
+					<div class="size-80">
+
+						<p>
+							<span>$a \times 10^n \;$</span>
+							<span class="fragment" data-fragment-index="0">where $1 \leq a \lt 10$</span>
+						</p>
 					</div>
 					<br />
 				</section>
@@ -712,17 +717,22 @@
 				<section>
 					<h3>Large Numbers in Scientific Notation</h3>
 
-					<div class="left-txt size-85">
+					<div class="left-txt size-95">
 						<p>Convert the following to scientific notation:</p>
-						<ul>
+						<ul style="line-height: 70px;">
 							<li>
-								\( 5,\!200 = 5.2 \times 10^3 \)
+								<span>\( 5,200\)</span>
+								<span class="fragment" data-fragment-index="1">\( = 5.2 \times 10^3 \)</span>
 							</li>
-							<li>
-								\( 300,\!000,\!000 = 3 \times 10^8 \)
+							<li class="fragment" data-fragment-index="2">
+								<span>\(300,000,000\)</span>
+								<span class="fragment" data-fragment-index="3">\( =3 \times 10^8 \)</span>
+
 							</li>
-							<li>
-								\( 92,\!000 = 9.2 \times 10^4 \)
+							<li class="fragment" data-fragment-index="4">
+								<span>\( 92,000\)</span>
+								<span class="fragment" data-fragment-index="5">\( = 9.2 \times 10^4 \)</span>
+
 							</li>
 						</ul>
 					</div>
@@ -734,18 +744,23 @@
 				<section>
 					<h3>Small Numbers in Scientific Notation</h3>
 
-					<div class="left-txt size-85">
+					<div class="left-txt size-95">
 						<p>Convert the following to scientific notation:</p>
-						<ul>
-							<li>
-								\( 0.004 = 4 \times 10^{-3} \)
+						<ul style="line-height: 70px;">
+							<li class="fragment" data-fragment-index="0">
+								<span>\( 0.004\)</span>
+								<span class="fragment" data-fragment-index="1">\( = 4 \times 10^{-3}\)</span>
 							</li>
-							<li>
-								\( 0.000072 = 7.2 \times 10^{-5} \)
+							<li class="fragment" data-fragment-index="2">
+								<span>\( 0.000072 \)</span>
+								<span class="fragment" data-fragment-index="3">\( = 7.2 \times 10^{-5}\)</span>
 							</li>
-							<li>
-								\( 0.09 = 9 \times 10^{-2} \)
+							<li class="fragment" data-fragment-index="4">
+								<span>\( 0.09 \)</span>
+								<span class="fragment" data-fragment-index="5">\( = 9 \times 10^{-2}\)</span>
 							</li>
+
+
 						</ul>
 					</div>
 					<br />
@@ -756,13 +771,13 @@
 				<section>
 					<h3>Try It Yourself 📝</h3>
 
-					<div class="left-txt size-85">
+					<div class="left-txt size-95">
 						<p>Write the following in scientific notation:</p>
-						<ol>
-							<li>47,000</li>
-							<li>0.00056</li>
-							<li>6,300,000</li>
-							<li>0.0089</li>
+						<ol style="line-height: 70px;"">
+							<li>$47,000$</li>
+							<li>$0.00056$</li>
+							<li>$6,300,000$</li>
+							<li>$0.0089$</li>
 						</ol>
 					</div>
 					<br />
@@ -777,57 +792,93 @@
 				<section>
 					<h3>Index Laws</h3>
 
-					<div class="left-txt size-70">
-						<p class="fragment" data-fragment-index="0">
-							Index laws (or exponent rules) help us simplify
-							expressions involving powers of the same
-							base.
-						</p>
+					<div class=" left-txt size-65">
+							<p class="fragment" data-fragment-index="0">
+								Index laws (or exponent rules) help us simplify
+								expressions involving powers of the same
+								base.
+							</p>
 
 					</div>
-					<div class="left-txt size-80">
 
-						<table style="width: 100%;">
-							<tr>
-								<td style="width: 70%;">
-									<ul style="line-height: 60px;">
-										<li class="fragment" data-fragment-index="1"><strong>Multiplying:</strong> \( a^m \times a^n = a^{m+n} \)</li>
-										<li class="fragment" data-fragment-index="2"><strong>Dividing:</strong> \( \dfrac{a^m}{a^n} = a^{m-n} \)</li>
-										<li class="fragment" data-fragment-index="3"><strong>Power of a power:</strong> \( (a^m)^n = a^{m \times n} \)</li>
-										<li class="fragment" data-fragment-index="4"><strong>Power of a product:</strong> \( (ab)^n = a^n b^n \)</li>
-										<li class="fragment" data-fragment-index="5"><strong>Zero index:</strong> \( a^0 = 1 \quad (a \neq 0) \)</li>
-										<li class="fragment" data-fragment-index="6"><strong>Negative index:</strong> \( a^{-n} = \dfrac{1}{a^n} \)</li>
-									</ul>
-								</td>
-								<td style="width: 30%; text-align: center;" class="fragment" data-fragment-index="7">
-									<strong>Extra:</strong><br/>
+
+					<table style="width: 100%;font-size: 90%;padding: none;">
+						<tr>
+							<td style="width: 75%; text-align: left;">
+								<ul style="line-height: 70px;margin-left: -10px;">
+									<li class="fragment" data-fragment-index="1"><strong>Multiplying:</strong> \( a^m
+										\times a^n = a^{m+n} \)</li>
+									<li class="fragment" data-fragment-index="2"><strong>Dividing:</strong> \(
+										\dfrac{a^m}{a^n} = a^{m-n} \)</li>
+									<li class="fragment" data-fragment-index="3"><strong>Power of a power:</strong> \(
+										(a^m)^n = a^{m \times n} \)</li>
+									<li class="fragment" data-fragment-index="4"><strong>Power of a product:</strong> \(
+										(ab)^n = a^n b^n \)</li>
+									<li class="fragment" data-fragment-index="5"><strong>Zero index:</strong> \( a^0 = 1
+										\quad (a \neq 0) \)</li>
+									<li class="fragment" data-fragment-index="6"><strong>Negative index:</strong> \(
+										a^{-n} = \dfrac{1}{a^n} \)</li>
+								</ul>
+							</td>
+							<td style="width: 25%; text-align: center;" class="fragment" data-fragment-index="7">
+								<div style="border: 1px solid rgb(188, 188, 188); padding: 20px; border-radius: 15px;">
+									<strong>Extra:</strong><br />
 									$\large a^{\frac{1}{n}} = \sqrt[n]{a}$
-								</td>
-							</tr>
-						</table>
-					</div>
+								</div>
+							</td>
+						</tr>
+					</table>
+
 					<br />
 				</section>
 
 				<section>
 					<h3>Examples: Multiply and Divide</h3>
 
-					<div class="left-txt size-85">
+					<div class="left-txt size-95">
 						<ul style="line-height: 80px;">
 							<li>
-								\( x^3 \times x^4 = x^{3+4} = x^7 \)
+								<span>
+									\( x^3 \times x^4 \)
+								</span>
+								<span class="fragment" data-fragment-index="1">
+									\(  = x^{3+4}\)
+								</span>
+								<span class="fragment" data-fragment-index="2">
+									\( = x^7 \)
+								</span>
 							</li>
-							<li>
-								\( \frac{y^5}{y^2} = y^{5 - 2} = y^3 \)
+							<li class="fragment" data-fragment-index="3">
+								<span>
+									\(\dfrac{y^5}{y^2} \)
+								</span>
+								<span class="fragment" data-fragment-index="4">
+									\( = y^{5 - 2}\)
+								</span>
+								<span class="fragment" data-fragment-index="5">
+									\(= y^3 \)
+								</span>
 							</li>
-							<li>
-								\( 2^3 \times 2^2 = 2^{3+2} = 2^5 = 32 \)
+							<li class="fragment" data-fragment-index="6">
+								<span>
+									\( 2^3 \times 2^2  \)
+								</span>
+								<span class="fragment" data-fragment-index="7">
+									\( = 2^{3+2}\)
+								</span>
+								<span class="fragment" data-fragment-index="8">
+									\( =2^6\)
+								</span>
+								</span>
+								<span class="fragment" data-fragment-index="9">
+									\( =32\)
+								</span>
 							</li>
 						</ul>
 					</div>
-					<br/>
-					<br/>
-					<br/>
+					<br />
+					<br />
+					<br />
 				</section>
 
 				<section>
@@ -846,9 +897,9 @@
 							</li>
 						</ul>
 					</div>
-					<br/>
-					<br/>
-					<br/>
+					<br />
+					<br />
+					<br />
 				</section>
 
 				<section>
@@ -870,9 +921,9 @@
 							</li>
 						</ul>
 					</div>
-					<br/>
-					<br/>
-					<br/>
+					<br />
+					<br />
+					<br />
 				</section>
 
 
@@ -888,9 +939,9 @@
 							<li> \( 5^0 + 3^{-1} \) </li>
 						</ol>
 					</div>
-					<br/>
-					<br/>
-					
+					<br />
+					<br />
+
 				</section>
 
 
