--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -842,7 +842,7 @@
 									\( x^3 \times x^4 \)
 								</span>
 								<span class="fragment" data-fragment-index="1">
-									\(  = x^{3+4}\)
+									\( = x^{3+4}\)
 								</span>
 								<span class="fragment" data-fragment-index="2">
 									\( = x^7 \)
@@ -861,7 +861,7 @@
 							</li>
 							<li class="fragment" data-fragment-index="6">
 								<span>
-									\( 2^3 \times 2^2  \)
+									\( 2^3 \times 2^2 \)
 								</span>
 								<span class="fragment" data-fragment-index="7">
 									\( = 2^{3+2}\)
@@ -884,16 +884,40 @@
 				<section>
 					<h3>Power of a Power / Product</h3>
 
-					<div class="left-txt size-85">
+					<div class="left-txt size-95">
 						<ul style="line-height: 80px;">
-							<li>
-								\( (x^2)^3 = x^{2 \times 3} = x^6 \)
+							<li class="fragment" data-fragment-index="0">
+								<span>
+									\(\left(x^2\right)^3 \)
+								</span>
+								<span class="fragment" data-fragment-index="1">
+									\( = x^{2 \times 3} \)
+								</span>
+								<span class="fragment" data-fragment-index="2">
+									\(= x^6 \)
+								</span>
 							</li>
-							<li>
-								\( (3a)^2 = 3^2 \times a^2 = 9a^2 \)
+							<li class="fragment" data-fragment-index="3">
+								<span>
+									\(\left(3a^2\right)^2 \)
+								</span>
+								<span class="fragment" data-fragment-index="4">
+									\( = 3^2 \times a^4 \)
+								</span>
+								<span class="fragment" data-fragment-index="5">
+									\(= 9a^4 \)
+								</span>
 							</li>
-							<li>
-								\( (2x^3)^2 = 2^2 \times x^6 = 4x^6 \)
+							<li class="fragment" data-fragment-index="6">
+								<span>
+									\(\left(2x^3\right)^2 \)
+								</span>
+								<span class="fragment" data-fragment-index="7">
+									\( = 2^2 \times x^6 \)
+								</span>
+								<span class="fragment" data-fragment-index="8">
+									\(= 4x^6 \)
+								</span>
 							</li>
 						</ul>
 					</div>
@@ -907,17 +931,36 @@
 
 					<div class="left-txt size-85">
 						<ul style="line-height: 80px;">
-							<li>
-								\( a^0 = 1 \) (as long as \( a \neq 0 \))
+							<li class="fragment" data-fragment-index="0">
+								<span>
+									\(a^0 = 1 \)
+								</span>
+								<span class="fragment" data-fragment-index="1">
+									(as long as \( a \neq 0 \))
+								</span>
+
+								<p>
+									<span class="fragment" data-fragment-index="3">
+									 👉	\(\;7^0 = 1; \;\)
+									</span>
+									<span class="fragment" data-fragment-index="4">
+										 also \(\;(-1234)^0 = 1 \)
+									</span>
+								</p>
 							</li>
-							<li>
-								\( 7^0 = 1, \,\) \( x^0 = 1 \)
-							</li>
-							<li>
-								\( a^{-n} = \frac{1}{a^n} \)
-							</li>
-							<li>
-								\( 10^{-2} = \frac{1}{10^2} = \frac{1}{100} \)
+							<li class="fragment" data-fragment-index="5">
+								\( a^{-n} = \dfrac{1}{a^n} \)
+								<p>
+									<span class="fragment" data-fragment-index="6">
+										👉 \(\;10^{-2}\)
+									</span>
+									<span class="fragment" data-fragment-index="7">
+										\( = \dfrac{1}{10^2} \)
+									</span>
+									<span class="fragment" data-fragment-index="8">
+										\(  = \dfrac{1}{100} \)
+									</span>
+								</p>
 							</li>
 						</ul>
 					</div>
