--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -974,10 +974,10 @@
 					<h3>Try These</h3>
 
 					<div class="left-txt size-85">
-						<ol style="line-height: 80px;">
+						<ol style="line-height: 90px;">
 							<li> \( x^5 \times x^3 \) </li>
 							<li> \( \dfrac{a^6}{a^2} \) </li>
-							<li> \( (b^4)^2 \) </li>
+							<li> \( \left(b^4\right)^2 \) </li>
 							<li> \( (2c)^3 \) </li>
 							<li> \( 5^0 + 3^{-1} \) </li>
 						</ol>
