--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -631,7 +631,7 @@
 				</section>
 
 				<section>
-					<h3>Practice Examples</h3>
+					<h3>Practice Examples 📝</h3>
 					<div class="left-txt size-85">
 						<p>Try solving these using the correct order of operations:</p>
 						<ol>
@@ -971,7 +971,7 @@
 
 
 				<section>
-					<h3>Try These</h3>
+					<h3>Try These  📝</h3>
 
 					<div class="left-txt size-85">
 						<ol style="line-height: 90px;">
