--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -141,12 +141,160 @@
 						</li>
 
 				</div>
-				
+
 
 				<br />
 			</section>
 
-			
+			<section>
+				<section>
+					<h3>Introduction to Logarithms</h3>
+
+					<div class="left-txt size-75">
+						<p class="fragment" data-fragment-index="0">
+							A logarithm is the inverse of an exponent.
+							<span class="fragment" data-fragment-index="1">
+								It tells us what power we need to raise a base to in order to get a certain number.
+							</span>
+
+
+						</p>
+					</div>
+
+					<div class="fragment" data-fragment-index="2">
+						<iframe style="width: 100%; height: 430px; border: 5px solid rgb(166, 166, 166); margin-top: -10px; border-radius: 20px;"
+						src="../revealjs-animations/log-animation/index.html"></iframe>
+
+					</div>
+				</section>
+				<section>
+					<h3>Introduction to Logarithms</h3>
+
+					<div class="left-txt size-75">
+						<p>
+							A logarithm is the inverse of an exponent. It tells us what power we need to raise a base to
+							in order to get a certain number.
+						</p>
+
+						<p>
+							If:
+							\[
+							a^x = b
+							\]
+							Then:
+							\[
+							\log_a b = x
+							\]
+						</p>
+
+						<ul>
+							<li>\( \log_2 8 = 3 \) because \( 2^3 = 8 \)</li>
+							<li>\( \log_{10} 1000 = 3 \) because \( 10^3 = 1000 \)</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<h3>Evaluating Logarithms Without a Calculator</h3>
+
+					<div class="left-txt size-85">
+						<p>Simplify the following by thinking in terms of powers:</p>
+
+						<ul>
+							<li>\( \log_2 16 = 4 \) because \( 2^4 = 16 \)</li>
+							<li>\( \log_3 81 = 4 \) because \( 3^4 = 81 \)</li>
+							<li>\( \log_5 25 = 2 \) because \( 5^2 = 25 \)</li>
+							<li>\( \log_{10} 1 = 0 \) because \( 10^0 = 1 \)</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<h3>Logarithm Laws</h3>
+
+					<div class="left-txt size-85">
+						<ul>
+							<li>
+								<strong>Product Law:</strong>
+								\[
+								\log_a(xy) = \log_a x + \log_a y
+								\]
+							</li>
+							<li>
+								<strong>Quotient Law:</strong>
+								\[
+								\log_a\left(\frac{x}{y}\right) = \log_a x - \log_a y
+								\]
+							</li>
+							<li>
+								<strong>Power Law:</strong>
+								\[
+								\log_a(x^n) = n \log_a x
+								\]
+							</li>
+						</ul>
+						<p>These rules work for any base \( a > 0 \), \( a \ne 1 \).</p>
+					</div>
+				</section>
+
+				<section>
+					<h3>Using Log Laws – Examples</h3>
+
+					<div class="left-txt size-85">
+						<ul>
+							<li>\( \log_2(8 \cdot 4) = \log_2 8 + \log_2 4 = 3 + 2 = 5 \)</li>
+							<li>\( \log_3\left(\frac{81}{3}\right) = \log_3 81 - \log_3 3 = 4 - 1 = 3 \)</li>
+							<li>\( \log_5(25^3) = 3 \log_5 25 = 3 \times 2 = 6 \)</li>
+						</ul>
+					</div>
+				</section>
+
+				<section>
+					<h3>Change of Base Rule</h3>
+
+					<div class="left-txt size-85">
+						<p>
+							If your calculator only has log base 10 or natural log (ln), you can use the change of base
+							formula:
+						</p>
+
+						<p>
+							\[
+							\log_b a = \frac{\log_c a}{\log_c b}
+							\]
+							where \( c \) can be 10 (common log) or \( e \) (natural log).
+						</p>
+
+						<p>
+							Example:
+							\[
+							\log_2 10 = \frac{\log_{10} 10}{\log_{10} 2} = \frac{1}{0.3010} \approx 3.32
+							\]
+						</p>
+					</div>
+				</section>
+
+				<section>
+					<h3>Practice Questions</h3>
+
+					<div class="left-txt size-85">
+						<ol>
+							<li>Evaluate: \( \log_4 64 \)</li>
+							<li>Simplify using laws: \( \log_2 8 + \log_2 4 \)</li>
+							<li>Simplify: \( \log_3 81 - \log_3 3 \)</li>
+							<li>Use change of base: \( \log_7 50 \) (use base 10)</li>
+						</ol>
+					</div>
+				</section>
+
+
+
+
+
+
+			</section>
+
+
 
 
 
