--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -309,7 +309,7 @@
 
 						<ul>
 							<li class="fragment" data-fragment-index="2">
-								Workshop Engagement (20%) - Weekly.
+								Workshop Engagement (20%) - Week 1 to 11.
 							</li>
 							<li class="fragment" data-fragment-index="3">
 								Progress Test 1 (20%) - Week 4.
@@ -675,7 +675,7 @@
 
 					</div>
 
-					<br />
+
 					<br />
 					<br />
 				</section>
@@ -699,15 +699,11 @@
 
 
 					</div>
-					<div class="left-txt size-80">
+
+					<div class="">
 
 						<p>
-							Format:</p>
-					</div>
-					<div class="size-80">
-
-						<p>
-							<span>$a \times 10^n \;$</span>
+							Format: <span>$\;a \times 10^n \;$</span>
 							<span class="fragment" data-fragment-index="0">where $1 \leq a \lt 10$</span>
 						</p>
 					</div>
@@ -722,17 +718,16 @@
 						<ul style="line-height: 70px;">
 							<li>
 								<span>\( 5,200\)</span>
-								<span class="fragment" data-fragment-index="1">\( = 5.2 \times 10^3 \)</span>
+								<!--<span class="fragment" data-fragment-index="1">\( = 5.2 \times 10^3 \)</span>-->
 							</li>
 							<li class="fragment" data-fragment-index="2">
 								<span>\(300,000,000\)</span>
-								<span class="fragment" data-fragment-index="3">\( =3 \times 10^8 \)</span>
+								<!--<span class="fragment" data-fragment-index="3">\( =3 \times 10^8 \)</span>-->
 
 							</li>
 							<li class="fragment" data-fragment-index="4">
 								<span>\( 92,000\)</span>
-								<span class="fragment" data-fragment-index="5">\( = 9.2 \times 10^4 \)</span>
-
+								<!--<span class="fragment" data-fragment-index="5">\( = 9.2 \times 10^4 \)</span>-->
 							</li>
 						</ul>
 					</div>
@@ -749,15 +744,15 @@
 						<ul style="line-height: 70px;">
 							<li class="fragment" data-fragment-index="0">
 								<span>\( 0.004\)</span>
-								<span class="fragment" data-fragment-index="1">\( = 4 \times 10^{-3}\)</span>
+								<!--<span class="fragment" data-fragment-index="1">\( = 4 \times 10^{-3}\)</span>-->
 							</li>
 							<li class="fragment" data-fragment-index="2">
 								<span>\( 0.000072 \)</span>
-								<span class="fragment" data-fragment-index="3">\( = 7.2 \times 10^{-5}\)</span>
+								<!--<span class="fragment" data-fragment-index="3">\( = 7.2 \times 10^{-5}\)</span>-->
 							</li>
 							<li class="fragment" data-fragment-index="4">
 								<span>\( 0.09 \)</span>
-								<span class="fragment" data-fragment-index="5">\( = 9 \times 10^{-2}\)</span>
+								<!--<span class="fragment" data-fragment-index="5">\( = 9 \times 10^{-2}\)</span>-->
 							</li>
 
 
@@ -789,31 +784,97 @@
 			</section>
 
 			<section>
-				<section>
-					<h3>Index Laws</h3>
 
-					<div class=" left-txt size-65">
+				<section>
+					
+
+					<div>
+						<h3>Index Laws</h3>
+
+						<div class=" left-txt size-95">
+
 							<p class="fragment" data-fragment-index="0">
 								Index laws (or exponent rules) help us simplify
 								expressions involving powers of the same
 								base.
 							</p>
-
+						</div>
 					</div>
 
+					<div>
 
-					<table style="width: 100%;font-size: 90%;padding: none;">
+
+						<p class="fragment" data-fragment-index="1">
+							$
+							\ds \left(\frac{2a^2b}{b^3}\right)^3 ÷ \left(\frac{16a^5}{ab^7}\right)^2
+							$
+						</p>
+					</div>
+
+					<div>
+						<picture class="fragment" data-fragment-index="2">
+							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.webp"
+								type="image/webp">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.gif" alt="😬" width="120"
+								height="120">
+						</picture>
+					</div>
+
+					<br />
+				</section>
+
+				<section>
+					<div style="margin-top: -22px;">
+						<h3>Index Laws</h3>
+
+						<div class=" left-txt size-95">
+
+							<p>
+								Index laws (or exponent rules) help us simplify
+								expressions involving powers of the same
+								base.
+							</p>
+						</div>
+					</div>
+
+					<div>
+
+						<p>
+							$
+							\ds \frac{b^8}{32a^2}
+							$
+						</p>
+					</div>
+
+					<div>
+
+						<picture>
+							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f603/512.webp"
+								type="image/webp">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f603/512.gif" alt="😃" width="120"
+								height="120">
+						</picture>
+					</div>
+
+					<br />
+				</section>
+
+
+				<section>
+					<h3>Index Laws</h3>
+
+					<table style="width: 100%;font-size: 94%;padding: none;">
 						<tr>
 							<td style="width: 75%; text-align: left;">
-								<ul style="line-height: 70px;margin-left: -10px;">
+								<ul style="line-height: 80px;margin-left: -10px;">
 									<li class="fragment" data-fragment-index="1"><strong>Multiplying:</strong> \( a^m
 										\times a^n = a^{m+n} \)</li>
 									<li class="fragment" data-fragment-index="2"><strong>Dividing:</strong> \(
 										\dfrac{a^m}{a^n} = a^{m-n} \)</li>
 									<li class="fragment" data-fragment-index="3"><strong>Power of a power:</strong> \(
-										(a^m)^n = a^{m \times n} \)</li>
+										\left(a^m\right)^n = a^{m \times n} \)</li>
 									<li class="fragment" data-fragment-index="4"><strong>Power of a product:</strong> \(
-										(ab)^n = a^n b^n \)</li>
+										\left(ab\right)^n = a^n b^n \)</li>
 									<li class="fragment" data-fragment-index="5"><strong>Zero index:</strong> \( a^0 = 1
 										\quad (a \neq 0) \)</li>
 									<li class="fragment" data-fragment-index="6"><strong>Negative index:</strong> \(
@@ -941,10 +1002,10 @@
 
 								<p>
 									<span class="fragment" data-fragment-index="3">
-									 👉	\(\;7^0 = 1; \;\)
+										👉 \(\;7^0 = 1; \;\)
 									</span>
 									<span class="fragment" data-fragment-index="4">
-										 also \(\;(-1234)^0 = 1 \)
+										also \(\;(-1234)^0 = 1 \)
 									</span>
 								</p>
 							</li>
@@ -958,7 +1019,7 @@
 										\( = \dfrac{1}{10^2} \)
 									</span>
 									<span class="fragment" data-fragment-index="8">
-										\(  = \dfrac{1}{100} \)
+										\( = \dfrac{1}{100} \)
 									</span>
 								</p>
 							</li>
@@ -971,7 +1032,7 @@
 
 
 				<section>
-					<h3>Try These  📝</h3>
+					<h3>Try These 📝</h3>
 
 					<div class="left-txt size-95">
 						<ol style="line-height: 90px;">
