--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -897,34 +897,34 @@
 					<h3>Examples: Multiply and Divide</h3>
 
 					<div class="left-txt size-95">
-						<ul style="line-height: 80px;">
+						<ul style="line-height: 120px;">
 							<li>
 								<span>
 									\( x^3 \times x^4 \)
 								</span>
-								<span class="fragment" data-fragment-index="1">
+								<!--<span class="fragment" data-fragment-index="1">
 									\( = x^{3+4}\)
 								</span>
 								<span class="fragment" data-fragment-index="2">
 									\( = x^7 \)
-								</span>
+								</span>-->
 							</li>
 							<li class="fragment" data-fragment-index="3">
 								<span>
 									\(\dfrac{y^5}{y^2} \)
 								</span>
-								<span class="fragment" data-fragment-index="4">
+								<!--<span class="fragment" data-fragment-index="4">
 									\( = y^{5 - 2}\)
 								</span>
 								<span class="fragment" data-fragment-index="5">
 									\(= y^3 \)
-								</span>
+								</span>-->
 							</li>
 							<li class="fragment" data-fragment-index="6">
 								<span>
 									\( 2^3 \times 2^2 \)
 								</span>
-								<span class="fragment" data-fragment-index="7">
+								<!--<span class="fragment" data-fragment-index="7">
 									\( = 2^{3+2}\)
 								</span>
 								<span class="fragment" data-fragment-index="8">
@@ -933,7 +933,7 @@
 								</span>
 								<span class="fragment" data-fragment-index="9">
 									\( =32\)
-								</span>
+								</span>-->
 							</li>
 						</ul>
 					</div>
@@ -946,39 +946,39 @@
 					<h3>Power of a Power / Product</h3>
 
 					<div class="left-txt size-95">
-						<ul style="line-height: 80px;">
+						<ul style="line-height: 120px;">
 							<li class="fragment" data-fragment-index="0">
 								<span>
 									\(\left(x^2\right)^3 \)
 								</span>
-								<span class="fragment" data-fragment-index="1">
+								<!--<span class="fragment" data-fragment-index="1">
 									\( = x^{2 \times 3} \)
 								</span>
 								<span class="fragment" data-fragment-index="2">
 									\(= x^6 \)
-								</span>
+								</span>-->
 							</li>
 							<li class="fragment" data-fragment-index="3">
 								<span>
 									\(\left(3a^2\right)^2 \)
 								</span>
-								<span class="fragment" data-fragment-index="4">
+								<!--<span class="fragment" data-fragment-index="4">
 									\( = 3^2 \times a^4 \)
 								</span>
 								<span class="fragment" data-fragment-index="5">
 									\(= 9a^4 \)
-								</span>
+								</span>-->
 							</li>
 							<li class="fragment" data-fragment-index="6">
 								<span>
 									\(\left(2x^3\right)^2 \)
 								</span>
-								<span class="fragment" data-fragment-index="7">
+								<!--<span class="fragment" data-fragment-index="7">
 									\( = 2^2 \times x^6 \)
 								</span>
 								<span class="fragment" data-fragment-index="8">
 									\(= 4x^6 \)
-								</span>
+								</span>-->
 							</li>
 						</ul>
 					</div>
