--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -1001,18 +1001,20 @@
 								</span>
 
 								<p>
-									<span class="fragment" data-fragment-index="3">
+									&nbsp;
+									<!--<span class="fragment" data-fragment-index="3">
 										👉 \(\;7^0 = 1; \;\)
 									</span>
 									<span class="fragment" data-fragment-index="4">
 										also \(\;(-1234)^0 = 1 \)
-									</span>
+									</span>-->
 								</p>
 							</li>
 							<li class="fragment" data-fragment-index="5">
 								\( a^{-n} = \dfrac{1}{a^n} \)
 								<p>
-									<span class="fragment" data-fragment-index="6">
+									&nbsp;
+									<!--<span class="fragment" data-fragment-index="6">
 										👉 \(\;10^{-2}\)
 									</span>
 									<span class="fragment" data-fragment-index="7">
@@ -1020,12 +1022,14 @@
 									</span>
 									<span class="fragment" data-fragment-index="8">
 										\( = \dfrac{1}{100} \)
-									</span>
+									</span>-->
 								</p>
+							</li>
+							<li>
+								$a^{\frac{1}{n}}=\sqrt[n]{a}$
 							</li>
 						</ul>
 					</div>
-					<br />
 					<br />
 					<br />
 				</section>
